// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Checkbox checked and disabled unchanged 1`] = `
<div>
  <span
    aria-checked="true"
    aria-disabled="true"
    class="_checkbox_3ceb9d _disabled_3ceb9d"
    data-checked=""
    data-disabled=""
    id="base-ui-_r_6_"
    role="checkbox"
    tabindex="-1"
  >
    <span
      class="_indicator_3ceb9d _indicatorChecked_3ceb9d"
    >
      <span
        class="_iconWrapper_3ceb9d"
        data-checked=""
        data-disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check _icon_3ceb9d"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="3"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
      </span>
    </span>
    <span
      class="_label_3ceb9d"
    >
      Check me
    </span>
  </span>
  <input
    aria-hidden="true"
    checked=""
    disabled=""
    style="overflow: hidden; white-space: nowrap; position: fixed; top: 0px; left: 0px; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px;"
    tabindex="-1"
    type="checkbox"
  />
</div>
`;

exports[`renders Checkbox checked unchanged 1`] = `
<div>
  <span
    aria-checked="true"
    class="_checkbox_3ceb9d"
    data-checked=""
    id="base-ui-_r_2_"
    role="checkbox"
    tabindex="0"
  >
    <span
      class="_indicator_3ceb9d _indicatorChecked_3ceb9d"
    >
      <span
        class="_iconWrapper_3ceb9d"
        data-checked=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check _icon_3ceb9d"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="3"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
      </span>
    </span>
    <span
      class="_label_3ceb9d"
    >
      Check me
    </span>
  </span>
  <input
    aria-hidden="true"
    checked=""
    style="overflow: hidden; white-space: nowrap; position: fixed; top: 0px; left: 0px; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px;"
    tabindex="-1"
    type="checkbox"
  />
</div>
`;

exports[`renders Checkbox disabled unchanged 1`] = `
<div>
  <span
    aria-checked="false"
    aria-disabled="true"
    class="_checkbox_3ceb9d _disabled_3ceb9d"
    data-disabled=""
    data-unchecked=""
    id="base-ui-_r_4_"
    role="checkbox"
    tabindex="-1"
  >
    <span
      class="_indicator_3ceb9d"
    />
    <span
      class="_label_3ceb9d"
    >
      Check me
    </span>
  </span>
  <input
    aria-hidden="true"
    disabled=""
    style="overflow: hidden; white-space: nowrap; position: fixed; top: 0px; left: 0px; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px;"
    tabindex="-1"
    type="checkbox"
  />
</div>
`;

exports[`renders Checkbox indeterminate unchanged 1`] = `
<div>
  <span
    aria-checked="false"
    class="_checkbox_3ceb9d"
    data-unchecked=""
    id="base-ui-_r_8_"
    role="checkbox"
    tabindex="0"
  >
    <span
      class="_indicator_3ceb9d _indicatorIndeterminate_3ceb9d"
    />
    <span
      class="_label_3ceb9d"
    >
      Check me
    </span>
  </span>
  <input
    aria-hidden="true"
    style="overflow: hidden; white-space: nowrap; position: fixed; top: 0px; left: 0px; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px;"
    tabindex="-1"
    type="checkbox"
  />
</div>
`;

exports[`renders Checkbox unchanged 1`] = `
<div>
  <span
    aria-checked="false"
    class="_checkbox_3ceb9d"
    data-unchecked=""
    id="base-ui-_r_0_"
    role="checkbox"
    tabindex="0"
  >
    <span
      class="_indicator_3ceb9d"
    />
    <span
      class="_label_3ceb9d"
    >
      Check me
    </span>
  </span>
  <input
    aria-hidden="true"
    style="overflow: hidden; white-space: nowrap; position: fixed; top: 0px; left: 0px; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px;"
    tabindex="-1"
    type="checkbox"
  />
</div>
`;
